MVP of rock paper scissors page.

--- a/rps.html
+++ b/rps.html
@@ -12,10 +12,10 @@
                 <button id = 'scissors'>SCISSORS</button>
             </div>
             <div id = "status">
-                <p>Rock beats Scissors:</p>
+                <p></p>
             </div>
-            <div id = "winState">
-                <h2>YOU WIN!</h2>
+            <div id = "message">
+                <h2></h2>
             </div>
         </div>
         <script src='actions.js'></script>
