--- a/rps.html
+++ b/rps.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>~~Rock, Paper, Scissors!~~</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div class="container">
