--- a/rps.html
+++ b/rps.html
@@ -12,6 +12,9 @@
                 <button id = 'paper'>PAPER</button>
                 <button id = 'scissors'>SCISSORS</button>
             </div>
+            <div id = "score">
+                <p>You: 0-0 :Computer</p>
+            </div>
             <div id = "status">
                 <p></p>
             </div>
